# file-storage-aiohttp

./: Docker-compose.yaml  Dockerfile.rest  Procfile  README.md  conftest.py  gateway.py  pyproject.toml  pytest.ini
deploy/: dev.env
docs/: delete.yaml  download.yaml  pathes.py  upload.yaml
file_storage_service/: __init__.py  logger.py  settings.py
file_storage_service/rest/: auth.py  handlers.py  middlewares.py  utils.py
store/: README.md
tests/: test_rest.py
