[tool.poetry]
name = "file-storage"
version = "0.0.1"
description = ""
authors = ["Ilia Demintsev <idemintsev@gmail.com>"]
readme = "README.md"
packages = [{include = "file_storage_service"}]

[tool.poetry.dependencies]
python = "^3.11"

aiohttp = "3.8.*"

attrs = "22.2.*"
uvloop = "0.17.*"
gunicorn = "20.1.*"
aiofiles = "23.1.*"
types-aiofiles = "23.1.*"
asyncclick = "8.1.*"
anyio = "3.6.*"


[tool.poetry.group.dev.dependencies]
honcho = "1.1.*"
mypy = "1.1.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
